log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      namespace: exercises
      name: log-output
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: sakuheinonen/log-output:2.1
          ports:
            - containerPort: 3030
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
